--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<body style="background:#121212">
+<img src="images/P4G-logo.png" alt="Product4Good logo" >
 </body>
 </html>
