--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Product4Good | Build Tech for Social Impact</title>
+<style>
+  img {
+    width: 100%;
+    height: auto;
+  }
+</style>
+</head>
 <body style="background:#121212">
 <img src="images/P4G-logo.png" alt="Product4Good logo" >
 </body>
