--- a/index2.html
+++ b/index2.html
@@ -19,12 +19,26 @@
   </button>
 
   <ul class="menu">
-    <li><a href="#">Link 1</a></li>
-    <li><a href="#">Link 2</a></li>
-    <li><a href="#">Link 3</a></li>
+      <li><a href="#your-career-in-tech">Your Career in Tech</a></li>
+      <li><a href="#the-quest-for-social-impact">The Quest for Social Impact</a></li>
+      <li><a href="#about-product4good">About Product4Good</a></li>
   </ul>
 </nav>
 <img src="images/P4G-logo.png" alt="Product4Good logo" >
+
+<section id="your-career-in-tech">
+    <h2>Your Career in Tech</h2>
+    </section>
+
+  <section id="the-quest-for-social-impact">
+    <h2>The Quest for Social Impact</h2>
+    </section>
+
+  <section id="about-product4good">
+    <h2>About Product4Good</h2>
+    </section>
+  
+  
 <script>
   const hamburger = document.querySelector('.hamburger');
   const menu = document.querySelector('.menu');
