--- a/index2.html
+++ b/index2.html
@@ -22,14 +22,17 @@
 
 <section id="your-career-in-tech">
     <h2>Your Career in Tech</h2>
+    <p>Lorem ipsum</p>
     </section>
 
   <section id="the-quest-for-social-impact">
     <h2>The Quest for Social Impact</h2>
+    <p>Lorem ipsum</p>
     </section>
 
   <section id="about-product4good">
     <h2>About Product4Good</h2>
+    <p>Lorem ipsum</p>
     </section>
   
   
