--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
       <li><a href="#about-product4good">About Product4Good</a></li>
   </ul>
 </nav>
-<img src="images/P4G-logo.png" alt="Product4Good logo" >
+<img src="images/P4G-logo.png" alt="Product4Good logo" id="logoImage">
 
 <section id="your-career-in-tech">
     <h2>Your Career in Tech</h2>
