--- a/index3.html
+++ b/index3.html
@@ -7,11 +7,8 @@
 <body>
 
 <header class="hero-image">
-  <img src="your-hero-image.jpg" alt="Hero Image">
+  <img src="images/P4G-logo.png" alt="Product4Good logo" id="logoImage">
   <div class="hero-text">
-    <h1>Your Headline Here</h1>
-    <p>Your descriptive text here.</p>
-    <button>Call to Action</button>
   </div>
 </header>
 
