--- a/index3.html
+++ b/index3.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-<header class="hero-image">
-  <img src="images/P4G-logo.png" alt="Product4Good logo" id="logoImage">
-  <div class="hero-text">
+<header>
+  <div class="hero-image">
+    <img src="images/P4G-logo.png" alt="Product4Good logo" id="logoImage">
   </div>
 </header>
 
