--- a/index3.html
+++ b/index3.html
@@ -13,22 +13,24 @@
 </header>
 
 <main>
+   <div class="content">
   
-<section id="your-career-in-tech">
-    <h2>Your Career in Tech</h2>
-    <p>Lorem ipsum</p>
-    </section>
+    <section id="your-career-in-tech">
+        <h2>Your Career in Tech</h2>
+        <p>Lorem ipsum</p>
+        </section>
 
-  <section id="the-quest-for-social-impact">
-    <h2>The Quest for Social Impact</h2>
-    <p>Lorem ipsum</p>
-    </section>
+    <section id="the-quest-for-social-impact">
+      <h2>The Quest for Social Impact</h2>
+      <p>Lorem ipsum</p>
+      </section>
 
-  <section id="about-product4good">
-    <h2>About Product4Good</h2>
-    <p>Lorem ipsum</p>
-    </section>
-  
+    <section id="about-product4good">
+      <h2>About Product4Good</h2>
+      <p>Lorem ipsum</p>
+      </section>
+
+   </div>
   </main>
 
 </body>
