--- a/index3.html
+++ b/index3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hero Image with Floating Text</title>
+<title>Product4Good | Build Tech for Social Impact</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
