--- a/index3.html
+++ b/index3.html
@@ -50,6 +50,9 @@
 
     <section id="closing">
       <p>In the meantime, check out this awesome article by Stephanie Harrison on <a href="https://www.thenewhappy.com/article/how-to-find-your-purpose">How to Find Your Purpose</a>.
+          Here's a choice quote: "It probably won’t surprise you to learn that people who view their work as a calling have higher work satisfaction and life satisfaction."
+        <br>
+        <br>
       </p>
      
    </div>
