--- a/index3.html
+++ b/index3.html
@@ -16,7 +16,7 @@
    <div class="content">
   
     <section id="your-career-in-tech">
-        <h2>Your Career in Tech</h2>
+        <h2>Advance Your Career in Tech</h2>
         <p>You love building tech products. You want to hone your craft, deepen your skills, and make a difference.
           To accomplish this, you think that you have to work at a VC-backed, for profit company like FANG or some "hot" startup.
           But you know that if you do this, you will whither because that job will not feed your hunger for impact. 
@@ -25,7 +25,7 @@
         </section>
 
     <section id="the-quest-for-social-impact">
-      <h2>The Quest for Social Impact</h2>
+      <h2>Join the Quest for Social Impact</h2>
       <p>Tech has finally hit the social impact sector with a bang. 
           Non-profits, government agencies, B-corps and those rare mission-driven for profits are all looking to solve problems that matter at scale.
           Philanthropic foundations, billionaires and governments are putting $$$$ into innovative social impact organizations.
@@ -37,7 +37,7 @@
       </section>
 
     <section id="about-product4good">
-      <h2>About Product4Good</h2>
+      <h2>Learn More About Product4Good</h2>
       <p>My name is Jen Mazzon and I spent 30 years working in for-profit Silicon Valley tech; now I lead a tech team at a U.S. national nonprofit.
           I am writing a book about how I bent my career towards social impact, how working in social impact is different from working in traditional for profit companies, 
           and how product development works differently (or not so much) in a social impact organization vs. a traditional for profit company.
