--- a/index3.html
+++ b/index3.html
@@ -49,7 +49,7 @@
       </section>
 
     <section id="closing">
-      <p>P.S. check out this awesome article by Stephanie Harrison on <a href="https://www.thenewhappy.com/article/how-to-find-your-purpose">How to Find Your Purpose</a>.
+      <p>P.S. check out this awesome article by Stephanie Harrison entitled <a href="https://www.thenewhappy.com/article/how-to-find-your-purpose">How to Find Your Purpose</a>.
           Here's a choice quote: <br>"people who view their work as a calling have higher work satisfaction and life satisfaction"
       </p>
     </section>
