--- a/index3.html
+++ b/index3.html
@@ -8,7 +8,7 @@
 
 <header>
   <div class="hero-image">
-    <img src="images/P4G-logo.png" alt="Product4Good logo" id="logoImage">
+    <img src="images/P4G-main-logo.png" alt="Product4Good logo" id="logoImage">
   </div>
 </header>
 
