--- a/index3.html
+++ b/index3.html
@@ -21,10 +21,10 @@
           Non-profits, government agencies, B-corps and those rare mission-driven for profits are all looking to solve problems that matter at scale.
           Philanthropic foundations, billionaires and governments are putting $$$$ into innovative social impact organizations.
           Social entrepreneurs are joining fellowships, incubators and competitions to get their social impact ventures funded. 
-          <i>Do you want to be a social entrepreneur? You can become one.</i>
-          The $$$$ people understand that they need tech folks to joing in for problems that matter to get solved at scale,
+          <br><i>Do you want to be a social entrepreneur? You can become one.</i><br>
+          The $$$$ people understand that they need tech folks to join in for problems that matter to get solved at scale,
           There are many open tech jobs in social impact organizations.
-          <i>Do you want to to have a tech job in social impact? You can get one.</i> </p>
+          <br><i>Do you want to to have a tech job in social impact? You can get one.</i><br> </p>
       </section>
 
   <section id="your-career-in-tech">
@@ -33,20 +33,20 @@
           To accomplish this, you think that you have to work at a VC-backed, for profit company like FANG or some "hot" startup.
           But you know that if you do this, you will whither because that job will not feed your hunger for impact. 
           You have an intrinsic need to solve problems that address problems that truly matter, that will help nudge the world towards a better future.
-          YOU CAN DO BOTH. You can have a successful tech career AND have positive social impact. </p>
+          <br>YOU CAN DO BOTH. You can have a successful tech career AND have positive social impact. </p>
       </section>
 
     
 
     <section id="about-product4good">
       <h2>Learn More About Product4Good</h2>
-      <p>My name is Jen Mazzon and I spent 30 years working in for-profit Silicon Valley tech; now I lead a tech team at a U.S. national nonprofit.
+      <p>My name is Jen Mazzon. After 30 years working in for-profit Silicon Valley tech, I now lead a tech team at a U.S. national nonprofit.
           I am writing a book about how I bent my career towards social impact, how working in social impact is different from working in traditional for profit companies, 
           and how product development works differently (or not so much) in a social impact organization vs. a traditional for profit company.
-          I want to encourage others to pursue their dreams BOTH building tech AND making social impact.
+          I want to encourage others to pursue their dreams BOTH building tech AND making social impact.<br>
           <i>Do you have your own story to share about how you are doing or are hoping to build tech for social impact?</i>
           I invite you to share your story with me, send me questions/thoughts, and sign up to to get the book release announcement.
-          <i>If you share your story with me, I will give you my book for free when it releases later in 2024.</i>
+          <br><i>If you share your story with me, I will give you my book for free when it releases later in 2024.</i>
           </p>
       </section>
 
