--- a/index3.html
+++ b/index3.html
@@ -59,5 +59,11 @@
    </div>
   </main>
 
+<footer>
+  <div class="P4G-mockups">
+    <img src="images/P4G-mockups8.jpg" alt="Product4Good mockups" id="mockupImage">
+  </div>
+</header>
+
 </body>
 </html>
