--- a/index3.html
+++ b/index3.html
@@ -56,7 +56,9 @@
       </p>
     </section>
 
-   <img src="images/P4G-mockups8.jpg" alt="Product4Good mockups" id="mockupImage">
+    <section id="p4g-mockups">
+      <img src="images/P4G-mockups8.jpg" alt="Product4Good mockups" id="mockupsImage">
+    </section>
      
    </div>
   </main>
