--- a/index3.html
+++ b/index3.html
@@ -55,12 +55,15 @@
           Here's a choice quote: <span class="colored-sentence">"people who view their work as a calling have higher work satisfaction and life satisfaction"</span>
       </p>
     </section>
-
-    <section id="p4g-mockups">
-      <img src="images/P4G-mockups8.jpg" alt="Product4Good mockups" id="mockupsImage">
-    </section>
      
    </div>
+
+
+    <div class="p4g-mockups">
+      <img src="images/P4G-mockups8.jpg" alt="Product4Good mockups" id="mockupsImage">
+    </div>
+
+  
   </main>
 
 </body>
