--- a/index3.html
+++ b/index3.html
@@ -60,8 +60,9 @@
 
 
     <div class="p4g-mockups">
-      <img src="images/P4G-mockups5.jpg" alt="Product4Good floating in the mountains" id="mockupsImage">
-      <img src="images/P4G-mockups8.jpg" alt="Product4Good at the tip of your canoe" id="mockupsImage">
+      /* <img src="images/P4G-mockups5.jpg" alt="Product4Good floating in the mountains" id="mockupsImage"> */
+      /* <img src="images/P4G-mockups8.jpg" alt="Product4Good at the tip of your canoe" id="mockupsImage"> */
+      <img src="images/P4G-mockups14.jpg" alt="Product4Good in the ocean at sunset" id="mockupsImage">
     </div>
 
   
