--- a/index3.html
+++ b/index3.html
@@ -40,13 +40,13 @@
 
     <section id="about-product4good">
       <h2>Learn More About Product4Good</h2>
-      <p>My name is Jen Mazzon. After 30 years working in for-profit Silicon Valley tech, I now lead a tech team at a U.S. national nonprofit.
+      <p>My name is <a href="https://www.linkedin.com/in/jenmazzon">Jen Mazzon</a>. After 30 years working in for-profit Silicon Valley tech, I now lead a tech team at a U.S. national nonprofit.
           I am writing a book about how I bent my career towards social impact, how working in social impact is different from working in traditional for profit companies, 
           and how product development works differently (or not so much) in a social impact organization vs. a traditional for profit company.
           I want to encourage others to pursue their dreams BOTH building tech AND making social impact.<span class="colored-sentence">
           <i>Do you have your own story to share about how you are doing or are hoping to build tech for social impact?</i></span>
-          I invite you to share your story with me, send me questions/thoughts, and sign up to to get the book release announcement.
-          <span class="colored-sentence"><i>Share your story with me ad I will give you my book for free when it releases later this year.</i></span>
+          <span class="colored-sentence"><i>Share your story with me and I will give you my book for free when it releases later this year.</i></span> 
+          If don't have a story to share, please feel free to reach out with questions/thoughts or sign up to to get the book release announcement.
           </p>
       </section>
 
