--- a/index3.html
+++ b/index3.html
@@ -45,7 +45,7 @@
           and how product development works differently (or not so much) in a social impact organization vs. a traditional for profit company.
           I want to encourage others to pursue their dreams BOTH building tech AND making social impact.<span class="colored-sentence">
           <i>Do you have your own story to share about how you are doing or are hoping to build tech for social impact?</i></span>
-          <span class="colored-sentence"><i>Share your story with me and I will give you my book for free when it releases later this year.</i></span> 
+          <span class="colored-sentence">SHARE YOUR STORY<i> and I will give you my book for free when it releases later this year.</i></span> 
           If don't have a story to share, please feel free to reach out with questions/thoughts or sign up to to get the book release announcement.
           </p>
       </section>
