--- a/index3.html
+++ b/index3.html
@@ -17,14 +17,12 @@
   
  <section id="the-quest-for-social-impact">
       <h2>Join the Quest for Social Impact</h2>
-      <p>Tech has finally hit the social impact sector with a bang. 
+      <p>Tech has finally hit the social impact sector with a bang and there are open tech jobs in social impact organizations.
           Non-profits, government agencies, B-corps and those rare mission-driven for profits are all looking to solve problems that matter at scale.
           Philanthropic foundations, billionaires and governments are putting $$$$ into innovative social impact organizations.
           Social entrepreneurs are joining fellowships, incubators and competitions to get their social impact ventures funded. 
           <span class="colored-sentence"><i>Do you want to be a social entrepreneur?</i>  YOU CAN BE ONE.</span><br>
-          The $$$$ people understand that they need tech folks to join in for problems that matter to get solved at scale,
-          There are many open tech jobs in social impact organizations.
-         <span class="colored-sentence"><i>Do you want to to have a tech job in social impact?</i>  YOU CAN GET ONE.</span> </p>
+          <span class="colored-sentence"><i>Do you want to to have a tech job in social impact?</i>  YOU CAN GET ONE.</span> </p>
       </section>
 
   <section id="your-career-in-tech">
@@ -41,7 +39,7 @@
     <section id="about-product4good">
       <h2>Learn More About Product4Good</h2>
       <p>My name is <a href="https://www.linkedin.com/in/jenmazzon">Jen Mazzon</a>. After 30 years working in for-profit Silicon Valley tech, I now lead a tech team at a U.S. national nonprofit.
-          I am writing a book about how I bent my career towards social impact, how working in social impact is different from working in traditional for profit companies, 
+          I am writing a book about how I pivoted my career to social impact, how working in social impact is different from working in traditional for profit companies, 
           and how product development works differently (or not so much) in a social impact organization vs. a traditional for profit company.
           I want to encourage others to pursue their dreams BOTH building tech AND making social impact.<span class="colored-sentence">
           <i>Do you have your own story to share about how you are doing or are hoping to build tech for social impact?</i></span>
