--- a/index3.html
+++ b/index3.html
@@ -16,7 +16,7 @@
    <div class="content">
   
  <section id="the-quest-for-social-impact">
-      <h2>Join the Quest for Social Impact</h2>
+      <h2>Join the Social Impact Quest</h2>
       <p>Tech has finally hit the social impact sector with a bang and there are open tech jobs in social impact organizations.
           Non-profits, government agencies, B-corps and those rare mission-driven for profits are all looking to solve problems that matter at scale.
           Philanthropic foundations, billionaires and governments are putting $$$$ into innovative social impact organizations.
