--- a/index3.html
+++ b/index3.html
@@ -21,8 +21,7 @@
           Non-profits, government agencies, B-corps and those rare mission-driven for profits are all looking to solve problems that matter at scale.
           Philanthropic foundations, billionaires and governments are putting $$$$ into innovative social impact organizations.
           Social entrepreneurs are joining fellowships, incubators and competitions to get their social impact ventures funded. 
-          <span class="colored-sentence"><i>Do you want to be a social entrepreneur?</i>  YOU CAN BE ONE.</span><br>
-          <span class="colored-sentence"><i>Do you want to to have a tech job in social impact?</i>  YOU CAN GET ONE.</span> </p>
+          <span class="colored-sentence"><i>Do you want to be a social entrepreneur or get a tech job in social impact?</i>  YOU CAN DO IT.</span> </p>
       </section>
 
   <section id="your-career-in-tech">
