--- a/index3.html
+++ b/index3.html
@@ -59,7 +59,7 @@
 
 
     <div class="p4g-mockups">
-       <img src="images/P4G-mockups14.jpg" alt="Product4Good in the ocean at sunset" id="mockupsImage">
+       <img src="images/P4G-mockups14.png" alt="Product4Good in the ocean at sunset" id="mockupsImage">
     </div>
 
   
