--- a/index3.html
+++ b/index3.html
@@ -45,7 +45,7 @@
           <span class="colored-sentence">SHARE YOUR STORY<i> and I will give you my book for free when it releases later this year.</i></span> 
           If don't have a story to share, please feel free to reach out with questions/thoughts or sign up to to get the book release announcement.
           <br><br>
-            <button href="https://forms.gle/MvxbbgXGkozXBWgy7">Contact Jen</button>
+            <button onclick="https://forms.gle/MvxbbgXGkozXBWgy7">Contact Jen</button>
           </p>
       </section>
 
