--- a/index3.html
+++ b/index3.html
@@ -21,7 +21,7 @@
           Non-profits, government agencies, B-corps and those rare mission-driven for profits are all looking to solve problems that matter at scale.
           Philanthropic foundations, billionaires and governments are putting $$$$ into innovative social impact organizations.
           Social entrepreneurs are joining fellowships, incubators and competitions to get their social impact ventures funded. 
-          <span class="colored-sentence"><i>Do you want to be a social entrepreneur or get a tech job in social impact?</i>  YOU CAN DO IT.</span> </p>
+          <span class="colored-sentence">YOU CAN DO IT. You can be a social entrepreneur or get a tech job in social impact.</span> </p>
       </section>
 
   <section id="your-career-in-tech">
