--- a/index3.html
+++ b/index3.html
@@ -41,8 +41,8 @@
           I am writing a book about how I pivoted my career to social impact, how working in social impact is different from working in traditional for profit companies, 
           and how product development works differently (or not so much) in a social impact organization vs. a traditional for profit company.
           I want to encourage others to pursue their dreams BOTH building tech AND making social impact.<span class="colored-sentence">
-          <i>Do you have your own story to share about how you are doing or are hoping to build tech for social impact?</i></span>
-          <span class="colored-sentence">SHARE YOUR STORY<i> and I will give you my book for free when it releases later this year.</i></span> 
+          Do you have your own story to share about how you are doing or are hoping to build tech for social impact?</span>
+          <span class="colored-sentence">SHARE YOUR STORY and I will give you my book for free when it releases later this year.</span> 
           If don't have a story to share, please feel free to reach out with questions/thoughts or sign up to to get the book release announcement.
           <br><br>
            <button onclick="window.location.href='https://forms.gle/MvxbbgXGkozXBWgy7'">Contact Jen</button>
