--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Product4Good | Build Tech for Social Impact</title>
-<link rel="stylesheet" href="style.css">
+  <title>Product4Good | Build Tech for Social Impact</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
