--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           I want to encourage others to pursue their dreams BOTH building tech AND making social impact.<span class="colored-sentence">
           Do you have your own story to share about how you are doing or are hoping to build tech for social impact?</span>
           <span class="colored-sentence">SHARE YOUR STORY and I will give you my book for free when it releases later this year.</span> 
-          If don't have a story to share, please feel free to reach out with questions/thoughts or sign up to to get the book release announcement.
+          Please feel free to reach out with questions/considerations, or sign up to to get the book release announcement.
           <br><br>
            <button onclick="window.location.href='https://forms.gle/MvxbbgXGkozXBWgy7'">Contact Jen</button>
           </p>
