--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>You love building tech products. You want to hone your craft, deepen your skills, and make a difference.
           To accomplish this, you thought that you'd have to work at a VC-backed, for profit company like FANG or some sweathouse startup.
           But you know that if you do this, you will wither and burn out because that job will not feed your hunger for impact. 
-          You have an intrinsic need to solve problems that address problems that truly matter, that will help nudge the world towards a better future.
+          You have an intrinsic need to create solutions to address problems that truly matter, that will help nudge the world towards a better future.
          <span class="colored-sentence">YOU CAN DO BOTH. You can have a successful tech career AND have positive social impact.</span> </p>
       </section>
 
