--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h2>Join the Social Impact Quest</h2>
       <p>Tech has finally hit the social impact sector with a bang and there are open tech jobs in social impact organizations.
           Non-profits, government agencies, B-corps and those rare mission-driven for profits are all looking to solve problems that matter at scale.
-          Philanthropic foundations, billionaires and governments are putting $$$$ into innovative social impact organizations.
+          Philanthropic foundations, billionaires and governments are investing in innovative social impact organizations.
           Social entrepreneurs are joining fellowships, incubators and competitions to get their social impact ventures funded. 
           <span class="colored-sentence">YOU CAN DO IT. You can be a social entrepreneur or get a tech job in social impact.</span> </p>
       </section>
@@ -39,14 +39,11 @@
     <section id="about-product4good">
       <h2>Learn More About Product4Good</h2>
       <p>My name is <a href="https://www.linkedin.com/in/jenmazzon">Jen Mazzon</a> and after 30 years working in for-profit Silicon Valley tech, I now lead a tech team at a U.S. national nonprofit.
-          I am writing a book about how I pivoted my career to social impact, how working in social impact is different from working in traditional for profit companies, 
+          I self-publishing a book about how I pivoted my career to social impact, how working in social impact is different from working in traditional for profit companies, 
           and how product development works differently (or not so much) in a social impact organization vs. a traditional for profit company.
           I want to encourage others to pursue their dreams BOTH building tech AND making social impact.<span class="colored-sentence">
-          Do you have your own story to share about how you are doing or are hoping to build tech for social impact?</span>
-          <span class="colored-sentence">SHARE YOUR STORY and I will give you my book for free when it releases later this year.</span> 
-          Please feel free to reach out with questions/considerations, or sign up to get the book release announcement.
           <br><br>
-           <button onclick="window.location.href='https://forms.gle/MvxbbgXGkozXBWgy7'">Contact Jen</button>
+           <button onclick="window.location.href='https://www.amazon.com/Product4Good-Guide-Building-Social-Impact-ebook/dp/B0D86GY6B9'">Pre-Order the Book</button>
           </p>
       </section>
 
