--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="about-product4good">
       <h2>Learn More About Product4Good</h2>
       <p>My name is <a href="https://www.linkedin.com/in/jenmazzon">Jen Mazzon</a> and after 30 years working in for-profit Silicon Valley tech, I now lead a tech team at a U.S. national nonprofit.
-          I self-publishing a book about how I pivoted my career to social impact, how working in social impact is different from working in traditional for profit companies, 
+          I have written a book about how I pivoted my career to social impact, how working in social impact is different from working in traditional for profit companies, 
           and how product development works differently (or not so much) in a social impact organization vs. a traditional for profit company.
           I want to encourage others to pursue their dreams BOTH building tech AND making social impact.<span class="colored-sentence">
           <br><br>
