--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
           Non-profits, government agencies, B-corps and those rare mission-driven for profits are all looking to solve problems that matter at scale.
           Philanthropic foundations, billionaires and governments are investing in innovative social impact organizations.
           Social entrepreneurs are joining fellowships, incubators and competitions to get their social impact ventures funded. 
-          <span class="colored-sentence">YOU CAN DO IT. You can be a social entrepreneur or get a tech job in social impact.</span> </p>
-      <span class="colored-sentence">
+          <span class="colored-sentence">YOU CAN DO IT. You can be a social entrepreneur or get a tech job in social impact.</span><span class="colored-sentence">
           <br><br>
            <button onclick="window.location.href='https://www.linkedin.com/company/product4good/'">Follow Product4Good</button>
           </p>
