--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           and how product development works differently (or not so much) in a social impact organization vs. a traditional for profit company.
           <span class="colored-sentence">I want to encourage others to pursue their dreams BOTH building tech AND making social impact.</span><span class="colored-sentence">
           <br><br>
-           <button onclick="window.location.href='https://www.amazon.com/Product4Good-Guide-Building-Social-Impact-ebook/dp/B0D86GY6B9'">Pre-Order the Book</button>
+           <button onclick="window.location.href='https://www.amazon.com/Product4Good-Guide-Building-Social-Impact-ebook/dp/B0D86GY6B9'">Get the Book</button>
           </p>
       </section>
 
